Fix z-index so that modal stays on top

--- a/css/client.css
+++ b/css/client.css
@@ -7,7 +7,7 @@
   display: none;
   position: fixed;
   margin: 0 auto;
-  z-index: 998;
+  z-index: 9980;
   width: 100%;
   height: 100%;
   top: 0;
@@ -25,7 +25,7 @@
   margin: 50px auto 0 auto;
   padding: 0;
   border-radius: 5px;
-  z-index: 1000;
+  z-index: 10000;
   box-sizing: border-box;
 }
 .appbase_modal .appbase_search_box{
@@ -72,7 +72,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 9990;
   background: rgba(0,0,0,0.50);
 }
 .appbase_modal .appbase_total_info{
